--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                <label> <input type="checkbox">Remember Me</label>
                <a href="#">Forgot Password</a>
             </div>
-            <button type ="submit" class="btn">Login</button>
+            <button type ="submit" href="https://jpst.it/3Vca7" class="btn">Login</button>
             <div class="register-link">
                 <p>Don't Have Account? <a href="#">Register</a></p>
             </div>
