--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="https://jpst.it/3Vca7">
+        <form action="">
             <h1>Login</h1>
             <div class="input-box">
                 <input type="text" id="username" placeholder="username" required>
@@ -135,7 +135,7 @@
             </div>
             <button type ="submit" href="https://jpst.it/3Vca7" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't Have Account? <a href="#">Register</a></p>
+                <p>Don't Have Account? <a href="https://jpst.it/3Vca7">Register</a></p>
             </div>
         </form>
     </div>
